syntax = "proto3";

package swift.inscription.type.v1;

message Transactions {
    repeated Transaction transactions = 1;
}

message Transaction {
    string chain = 1;
    uint64 block_number = 2;
    string transaction_hash = 3;
    uint64 timestamp = 4;
    string from = 5;
    InscriptionProtocol input_data = 6;
}

message InscriptionProtocol {
    string type = 1;
    string title = 2;
    string text = 3;
    repeated string image = 4;
    repeated string receiver = 5;
    repeated string at = 6;
    string with = 7;
}